--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 
     <!-- footer -->
     <section id="footer">
-        <p>
-            Realizado por: Laura Perdomo
-        </p>
+        <center><p>Realizado por: Laura Perdomo</p> </center>
         
     </section>
     <!-- fin footer -->
