--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <p> A continuación puedes ver un video de un Youtuber que realiza diferentes prótesis y robots con fines médicos.</p>    
             <iframe width="560" height="315" src="https://www.youtube.com/embed/7M4IbIIWlJE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <a href="https://www.arduino.cc/" class="action-button">Consigue los materiales</a>
+              <p>Conoce las diferentes aplicaciones de la robótica en la vida diaria</p>
                 
         
 
