--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/7M4IbIIWlJE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <a href="https://www.arduino.cc/" class="action-button">Consigue los materiales</a>
               <p>Conoce las diferentes aplicaciones de la robótica en la vida diaria</p>
+
+
+            <h3>Consulta las diversas aplicaciones que tiene la robótica en nuestra vida</h3>
+            <a href="primer nivel/index.html" class="action-button2">Salud</a>
+            <a href="segundo nivel/index.html" class="action-button2">Máquinas</a>
+            <a href="tercer nivel/index.html" class="action-button2">Tecnología</a>
+
+            <center><img src="./imagenes/principal.jpg"></center>
+
                 
         
 
